return task added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=postgres
 spring.datasource.username=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/trello
 spring.datasource.driver-class-name=org.postgresql.Driver
+my.files-url=C:\\AinaArd\\images\\
+spring.servlet.multipart.max-file-size=15MB
+spring.servlet.multipart.max-request-size=15MB
