started works with chat, fixed deleting user from the desk

--- a/src/main/resources/Validation.properties
+++ b/src/main/resources/Validation.properties
@@ -1,7 +1,8 @@
 Login.isUnique.message = Login is already in use
 Login.default.message = Login is invalid
-Login.matchesPattern.message = Login should contain from 3 to 30 characters and have xxx@xxx.xxx format
+Login.matchesPattern.message = Login should contain from 5 to 30 characters
 
 Password.default.message = Password is invalid
+Password.matchesPattern.message = Password should contain from 5 to 30 characters and consist of letters and numbers
 
 
