--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,11 @@
             <artifactId>jquery</artifactId>
             <version>3.3.1-1</version>
         </dependency>
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>4.3.1</version>
+        </dependency>
     </dependencies>
 
     <properties>
