--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
             <artifactId>spring-aop</artifactId>
             <version>5.1.4.RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.telegram/telegrambots -->
+        <dependency>
+            <groupId>org.telegram</groupId>
+            <artifactId>telegrambots</artifactId>
+            <version>4.3.1</version>
+        </dependency>
 
     </dependencies>
 
