added checklists, elems. delete and add functions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,16 @@ spring.datasource.username=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/trello
 spring.datasource.driver-class-name=org.postgresql.Driver
 my.files.url=C:\\AinaArd\\images\\
-#spring.servlet.multipart.max-file-size=15MB
-#spring.servlet.multipart.max-request-size=15MB
+spring.servlet.multipart.max-file-size=15MB
+spring.servlet.multipart.max-request-size=15MB
+
+security.oauth2.authorization.token-key-access=AIzaSyCA_ymIn2PT7UClRpeHR4-I34V4N8aBJTA
+security.oauth2.client.clientId=896198613313-8sq2g5eu4t2lvp98vqmq0mrkh1sht7ji.apps.googleusercontent.com
+security.oauth2.client.clientSecret=Q3IJv8R1mgLRUPiztWZmnHqg
+security.oauth2.client.clientAuthenticationScheme=form
+security.oauth2.client.scope=email,profile,openid
+security.oauth2.client.accessTokenUri=https://www.googleapis.com/oauth2/v4/token
+security.oauth2.client.userAuthorizationUri=https://accounts.google.com/o/oauth2/v2/auth
+security.oauth2.resource.userInfoUri=https://www.googleapis.com/oauth2/v3/userinfo
+security.oauth2.resource.preferTokenInfo=true
 
