--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,11 @@
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-mongodb</artifactId>
         </dependency>
+            <dependency>
+                <groupId>org.springframework.security.oauth.boot</groupId>
+                <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+                <version>2.0.0.RELEASE</version>
+            </dependency>
     </dependencies>
 
     <properties>
